--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "github.com/meowtype/devparll"
+    "url": "https://github.com/MeowType/darl"
   },
   "keywords": [
     "dev",
