--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "darl",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Run npm scripts in parallel",
   "main": "darl.js",
   "dependencies": {
@@ -8,28 +8,28 @@
     "commander": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "13.9.1",
-    "typescript": "3.8.3"
+    "@types/node": "^14.6.1",
+    "typescript": "^4.0.2"
   },
   "scripts": {
+    "link": "npm link --force",
     "darl": "darl"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MeowType/darl"
+    "url": "https://github.com/volight/darl"
   },
   "keywords": [
     "dev",
     "parallel"
   ],
-  "author": "MeowType",
+  "author": "Volight",
   "license": "MIT",
   "bin": {
     "darl": "./darl.js"
   },
   "files": [
     "darl.js",
-    "dev.js",
-    "tsconfig.json"
+    "dev.js"
   ]
 }
