--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "darl",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "Run npm scripts in parallel",
   "main": "lib.js",
   "type": "commonjs",
@@ -14,15 +14,20 @@
     "./package.json": "./package.json"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "commander": "^6.0.0"
+    "chalk": "^4.1.2",
+    "commander": "^8.1.0",
+    "ink": "^3.0.9",
+    "react": "^16.14.0"
   },
   "devDependencies": {
-    "@types/node": "^14.6.1",
-    "symlink-dir": "^4.1.0",
-    "typescript": "^4.0.2"
+    "@types/node": "^16.4.10",
+    "@types/react": "^17.0.15",
+    "symlink-dir": "^5.0.1",
+    "typescript": "^4.3.5"
   },
   "scripts": {
+    "tsc:w": "tsc -w",
+    "tsc": "tsc",
     "link": "npm link --force",
     "init": "symlink-dir . node_modules/darl",
     "darl": "darl",
