--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "CommonJS",
+        "module": "ESNext",
         "moduleResolution": "node",
         "strict": true,
         "jsx": "react",
-        "outDir": ".",
+        "outDir": "es",
         "declaration": true,
+        "declarationDir": ".",
         "esModuleInterop": true,
         "resolveJsonModule": true,
+        "allowJs": true,
     },
     "include": [
         "./src/**/*.ts",
