--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "description": "Run npm scripts in parallel",
   "main": "lib.js",
-  "type": "commonjs",
+  "type": "module",
   "types": "lib.d.ts",
   "typings": "lib.d.ts",
   "exports": {
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "cli-spinners": "^2.6.0",
     "commander": "^8.1.0",
     "ink": "^3.0.9",
     "libsugar": "^2.7.0-beta.1",
+    "moment": "^2.29.1",
     "react": "^16.14.0"
   },
   "devDependencies": {
