--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "outDir": "tsout",
         "sourceMap": true,
         "resolveJsonModule": true,
+        "forceConsistentCasingInFileNames": true,
         "allowJs": true
     },
     "include": [
